tests/baselines/reference/instanceSubtypeCheck1.errors.txt
==== tests/cases/compiler/instanceSubtypeCheck1.ts (1 errors) ====
    interface A<T>
    {
       x: A<B<T>>
    }
     
    interface B<T> extends A<T>
              ~
!!! instanceSubtypeCheck1.ts(6,11): error TS2143: Interface 'B<T>' cannot extend interface 'A<T>':
!!! 	Types of property 'x' of types 'B<T>' and 'A<T>' are incompatible:
!!! 		Types 'B<A<T>>' and 'A<B<T>>' originating in infinitely expanding type reference do not refer to same named type.
    {
       x: B<A<T>>
    }